--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "parcel-plugin-clean-dist": "^0.0.6"
   },
   "dependencies": {
-    "aos": "^3.0.0-beta.6"
+    "@glidejs/glide": "^3.4.1",
+    "aos": "^3.0.0-beta.6",
+    "normalize.css": "^8.0.1"
   }
 }
