--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html",
+    "deploy:gh": "gh-pages -d dist"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
@@ -16,6 +17,7 @@
   "dependencies": {
     "@glidejs/glide": "^3.4.1",
     "aos": "^3.0.0-beta.6",
+    "gh-pages": "^3.1.0",
     "normalize.css": "^8.0.1"
   }
 }
